Added Global Error handler

--- a/Server/ServiceHostApp/App.config
+++ b/Server/ServiceHostApp/App.config
@@ -37,7 +37,7 @@
   
     <system.serviceModel>
       <services>
-        <service name="CalculatorServiceLib.CalculatorService" behaviorConfiguration="mexBehaviour">
+        <service name="CalculatorServiceLib.CalculatorService" behaviorConfiguration="calculationServiceBehaviour">
           
           <endpoint address="http://localhost:8080/CalculatorService"
                     binding="basicHttpBinding"
@@ -54,8 +54,9 @@
       </services>
       <behaviors>
         <serviceBehaviors>
-          <behavior name ="mexBehaviour">
+          <behavior name ="calculationServiceBehaviour">
             <serviceMetadata httpGetEnabled="true"/>
+            <serviceDebug includeExceptionDetailInFaults="true"/>
           </behavior>
         </serviceBehaviors>
       </behaviors>
